fjord-compiler/test/errors/uniqueness/SharedToUnique.fj
module errors.uniqueness.SharedToUnique

useUnique : Int -* Int
useUnique x =
  x

# needs to error, x is not unique
passShared : Int -> Int
passShared x =
  useUnique x
